scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/SfPi_Flow_Probe__c.object-meta.xml
<CustomObject>
    <description>Public-safe records owned by the SF Pi Flow advanced runtime sweep.</description>
    <label>SF Pi Flow Probe</label>
    <nameField>
        <label>Probe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Pi Flow Probes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>