scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/fields/CorrelationKey__c.field-meta.xml
<CustomField>
    <fullName>CorrelationKey__c</fullName>
    <externalId>true</externalId>
    <label>Correlation Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>