scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>