scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>