scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/fields/NullableText__c.field-meta.xml
<CustomField>
    <fullName>NullableText__c</fullName>
    <label>Nullable Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>