scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Probe</label>
    <referenceTo>SfPi_Flow_Probe__c</referenceTo>
    <relationshipLabel>Child Probes</relationshipLabel>
    <relationshipName>Child_Probes</relationshipName>
    <type>Lookup</type>
</CustomField>