scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/fields/Reject__c.field-meta.xml
<CustomField>
    <fullName>Reject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reject</label>
    <type>Checkbox</type>
</CustomField>