scripts/e2e/fixtures/sf-flow-advanced/force-app/main/default/objects/SfPi_Flow_Probe__c/validationRules/SfPi_Reject_When_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>SfPi_Reject_When_Requested</fullName>
    <active>true</active>
    <description>Creates a deterministic database fault for the SF Pi Flow runtime fixture.</description>
    <errorConditionFormula>Reject__c</errorConditionFormula>
    <errorMessage>SF Pi forced database fault.</errorMessage>
</ValidationRule>